[package]
name = "map_maker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
egui = "0.14.2"
egui_glium = "0.14.0"
egui_demo_lib = "0.14.0"
eframe = "0.14.0"
reqwest = { version = "0.11.5", features = ["json"] }
image = { version = "0.23", default-features = false, features = ["png"] }

