[package]
name = "map_maker"
version = "0.1.0"
edition = "2018"
#don't know what this is but required for using iced from source
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
thiserror="1.0"
tokio = { version = "1.12.0", features = ["full"] }
iced = { path = "/hdd/rust/projects/iced/",features = ["image", "debug","tokio" ] }
iced_native = { path = "/hdd/rust/projects/iced/native/" }
iced_graphics = { path = "/hdd/rust/projects/iced/graphics" }
#iced_wgpu="0.4"
#iced_core="0.4.0"
bytes="1.1.0"
reqwest = { version = "0.11.5", features = ["json"] }
slippy-map-tiles="0.16.0"

#bytes="0.5.4"
#[dependencies.reqwest]
#version = "0.10.2"
#features = ["json"]

